Operations API: Added /purchases and /sales
