# api/server.go
@@ -10,10 +10,10 @@ import (
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	"github.com/mfinancecombr/finance-wallet-api/db"
-	"github.com/spf13/viper"
-	"gopkg.in/go-playground/validator.v9"
-	echoSwagger "github.com/swaggo/echo-swagger"
 	_ "github.com/mfinancecombr/finance-wallet-api/docs" // docs is generated by Swag CLI
+	"github.com/spf13/viper"
+	echoSwagger "github.com/swaggo/echo-swagger"
+	"gopkg.in/go-playground/validator.v9"
 )
 
 const Version = "0.1.0"
@@ -86,6 +86,8 @@ func NewServerFromDB() (Server, error) {
 
 	echoInstance.GET("/api/v1/operations", server.getAllOperations)
 	echoInstance.DELETE("/api/v1/operations/:id", server.deleteOperationByID)
+	echoInstance.GET("/api/v1/purchases", server.getAllPurchases)
+	echoInstance.GET("/api/v1/sales", server.getAllSales)
 
 	echoInstance.DELETE("/api/v1/brokers/:id", server.brokersDelete)
 	echoInstance.GET("/api/v1/brokers", server.brokers)
